# solana-copy-trader

./: .cursorrules  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: jupiter-api.mdc  python.mdc  uv.mdc
.github/workflows/: docker-publish.yml
migrations/: env.py
migrations/versions/: 589224715784_create_tokens_table.py
src/: __init__.py  birdeye.py  copy_agent.py  jupiter.py  keygen.py  logger.py  main.py  models.py  network.py  portfolio.py  test_birdeye.py  token_price_resolver.py  token_resolver.py  trade_executer.py  trade_planner.py  update_token_list.py
src/dex/: __init__.py  base.py  jupiter.py  meteora.py  orca.py  raydium.py
src/network/: __init__.py  solana.py
tests/: conftest.py  test_copy_agent.py
